Added the ability to have delayed send from transmissior via a range input

--- a/canvas/client/transmissor.html
+++ b/canvas/client/transmissor.html
@@ -15,7 +15,8 @@ and open the template in the editor.
             <canvas id="output"></canvas>
             <div id="log"></div>
         </div>
-        
+        <input type="range" id="refrehRate" value="90" max="1000" min="0"><p id="refreshRateIndicator"></p>
         <script type="text/javascript" src="js/transmissor.js"></script>
+        <button onclick="applyRefreshRate()">Apply refresh rate</button>
     </body>
 </html>
